--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 				<h3>jQuery Thumbslider</h3>
 			</header>
 			<div id="slides">
-				<div class="slide"><img src="img/slides/device-imac.png" width="900"></div>
+				<div class="slide"><img src="img/slides/slide1.jpg" width="900" height="200"></div>
+				<div class="slide"><img src="img/slides/slide2.jpg" width="900" height="200"></div>
+				<div class="slide"><img src="img/slides/slide3.jpg" width="900" height="200"></div>
+				<div class="slide"><img src="img/slides/slide4.jpg" width="900" height="200"></div>
 			</div>
 		</div>
 	</div>
