--- a/index.html
+++ b/index.html
@@ -17,6 +17,36 @@
 				<div class="slide"><img src="img/slides/slide3.jpg" width="900" height="200"></div>
 				<div class="slide"><img src="img/slides/slide4.jpg" width="900" height="200"></div>
 			</div>
+
+			<nav id="menu">
+				<ul>
+					<li class="sep"></li>
+					<li class="product">
+						<a href="">
+							<img src="img/slides/slide1.jpg" alt="thumbnail">
+						</a>
+					</li>
+
+					<li class="product">
+						<a href="">
+							<img src="img/slides/slide2.jpg" alt="thumbnail">
+						</a>
+					</li>
+
+					<li class="product">
+						<a href="">
+							<img src="img/slides/slide3.jpg" alt="thumbnail">
+						</a>
+					</li>
+
+					<li class="product">
+						<a href="">
+							<img src="img/slides/slide4.jpg" alt="thumbnail">
+						</a>
+					</li>
+
+				</ul>
+			</nav>
 		</div>
 	</div>
 </body>
